@@ -3,8 +3,10 @@ import logging
 
 from ZODB.POSException import ConflictError
 from ZPublisher.interfaces import IPubAfterTraversal
-from ZPublisher.interfaces import IPubSuccess
 from zope.component import adapter
+from zope.interface import implementer
+from zope.interface import Interface
+from plone.transformchain.interfaces import ITransform
 
 from collective.purgebyid.api import markInvolvedObjs
 from collective.purgebyid.api import getInvolvedObjs
@@ -13,18 +15,51 @@ from collective.purgebyid.api import getInvolvedObjs
 logger = logging.getLogger('collective.purgebyid')
 
 
-@adapter(IPubSuccess)
-def handle_request_success(event):
-    """handle "IPubSuccess".
+@implementer(ITransform)
+@adapter(Interface, Interface)
+class MutatorTransform(object):
+    """Transformation using plone.transformchain.
+    This is registered at order 11000, i.e. "late". A typical transform
+
+    chain order may include:
+    * lxml transforms (e.g. plone.app.blocks, collectivexdv) => 8000-8999
+    * gzip => 10000
+    * mark ids involved => 11000
+    * caching => 12000
+
+    This transformer is uncommon in that it doesn't actually change the
+    response body. Instead, we look up caching operations which can modify
+    response headers and perform other caching functions.
+
     TODO: check max header size
           varnish and apache max header length is 8k by default, uuid length
           are 32 chars, so number of objects involved can reach approx 247...
     """
-    request = event.request
-    involved = getInvolvedObjs(request)
-    if involved:
-        event.request.response.setHeader(
-            'X-Ids-Involved', '#' + '#'.join(involved) + '#')
+
+    order = 11000
+
+    def __init__(self, published, request):
+        self.published = published
+        self.request = request
+
+    def transformUnicode(self, result, encoding):
+        self.mutate()
+        return None
+
+    def transformBytes(self, result, encoding):
+        self.mutate()
+        return None
+
+    def transformIterable(self, result, encoding):
+        self.mutate()
+        return None
+
+    def mutate(self):
+        request = self.request
+        involved = getInvolvedObjs(request)
+        if involved:
+            request.response.setHeader(
+                'X-Ids-Involved', '#' + '#'.join(involved) + '#')
 
 
 @adapter(IPubAfterTraversal)
